--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,20 +5,18 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [14.x]
 
     steps:
-    - uses: actions/checkout@v2
-    - run: npm ci
-    - run: curl http://db.rudixlab.com/hook
+      - uses: actions/checkout@v2
+      - run: curl http://db.rudixlab.com/hook
